--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-langchain>=0.1.15
-langgraph>=0.0.33
-langchain-openai>=0.0.8
-openai>=1.30.1
-python-dotenv>=1.0.1
-tiktoken>=0.6.0
-chromadb>=0.4.24
-langchain-community>=0.0.33
+langchain==0.3.25
+langchain-core==0.3.65
+langchain-openai==0.3.23
+langchain-community==0.3.25
+openai>=1.68.2,<2.0.0
+python-dotenv==1.0.1
+tiktoken>=0.7.0,<1.0.0
+chromadb==0.4.24
+requests==2.31.0
