--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ uvicorn==0.29.0
 requests==2.31.0
 python-dotenv==1.0.1
 numpy==1.26.4
+pydantic==2.8.2
 
 # LangGraph and LangChain Components
 langgraph==0.0.33
@@ -22,5 +23,17 @@ cdp-sdk==1.15.0
 # Vector Store
 chromadb==0.4.24
 
-# Optional: If you used asyncio workaround
+# Async Support
 nest_asyncio==1.6.0
+
+# HTTP Client
+httpx==0.27.0
+
+# JSON and Data Processing
+orjson==3.10.7
+
+# Environment and Configuration
+python-multipart==0.0.20
+
+# Optional: For better performance
+uvloop==0.19.0
