--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,11 @@ python-dotenv==1.0.1
 numpy==1.26.4
 pydantic==2.8.2
 
+# Database
+sqlalchemy==2.0.27
+psycopg2-binary==2.9.9
+alembic==1.13.1
+
 # LangGraph and LangChain Components
 langgraph==0.2.0
 langchain==0.0.297
