--- a/requirements.txt
+++ b/requirements.txt
@@ -4,41 +4,36 @@ uvicorn==0.29.0
 requests==2.31.0
 python-dotenv==1.0.1
 numpy==1.26.4
-pydantic==2.8.2
+pydantic==2.10.4
 
 # Database
 sqlalchemy==2.0.27
 psycopg2-binary==2.9.9
 alembic==1.13.1
 
-# LangGraph and LangChain Components
-langgraph==0.2.0
-langchain==0.0.297
-langchain-core==0.2.23
+# LangChain (Simplified)
 langchain-openai==0.0.8
 openai==1.23.6
-langchain_chroma==0.2.4
 
 # Streamlit Frontend
 streamlit==1.46.0
 
-# Coinbase CDP SDK
+# x402 Crypto Payment System
 cdp-sdk==1.15.0
 
-# Vector Store
-chromadb==0.4.24
-
-# Async Support
+# Utilities
 nest_asyncio==1.6.0
 
 # HTTP Client
 httpx==0.27.0
 
-# JSON and Data Processing
+# Amadeus API
+amadeus==8.1.0
+
+# JSON Processing
 orjson==3.10.7
 
-# Environment and Configuration
+# File Upload
 python-multipart==0.0.20
 
-# Optional: For better performance
-uvloop==0.19.0
+# Performance - removed uvloop due to CDP SDK compatibility
